[tool.poetry]
name = "blockchain-stablecoin-explorer"
version = "1.0.0"
description = "Autonomous blockchain stablecoin data exploration agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncio = "^3.4.3"
aiohttp = "^3.9.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
authlib = "^1.2.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
