[tool.poetry]
name = "blockchain-stablecoin-explorer"
version = "1.0.0"
description = "Autonomous blockchain stablecoin data exploration agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
sqlalchemy = "^2.0.48"
asyncio = "^3.4.3"
aiohttp = "^3.11.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
authlib = "^1.2.1"
pydantic = "^2.11.0"
pydantic-settings = "^2.8.0"
alembic = "^1.15.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.22"
marimo = "^0.10.9"
altair = "^5.4.1"
pandas = ">=2.3.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^24.3.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
hypothesis = "^6.112.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
